--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website</title>
-    <link rel="stylesheet" href="C:\Users\rohit\OneDrive\Desktop\SOMESH\style.css"><!-- CSS file link -->
+    <link rel="stylesheet" href="\style.css"><!-- CSS file link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
@@ -64,12 +64,12 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="C:\Users\rohit\Downloads\Profile-01.jpg" alt="">
+                    <img src="\Profile-01.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Somesh and I'm a <span class="typing-2"></span></div>
                     <p>I am a dedicated and hardworking student who recently completed 10th grade at R S International with an impressive score of 86.6%. I am currently honing my skills as a web developer through an internship at Khabai Tech. I am passionate about technology and am eager to learn and grow in this field. I am confident that my strong work ethic, determination, and skills will help me achieve my goals and excel in my career</p>
-                    <a href="#">Download CV</a>
+                    <a href="https://in.docworkspace.com/d/sIDugvJTtAeiXh7YG">Download CV</a>
                 </div>
             </div>
         </div>
@@ -194,7 +194,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="C:\Users\rohit\OneDrive\Desktop\New folder\Task-3.jpg" alt="">
+                        <img src="\Task-3.jpg" alt="">
                         <div class="text">Webpage Design</div>
                         <p>Made by me using HTML</p>
                     </div>
